# da-proj-2

./: .gitattributes  CMakeLists.txt  README.md  ilp_utils.cpp  ilp_utils.h  interface.cpp  interface.h  main.cpp  pallet.cpp  pallet.h  solver.cpp  solver.h  startup.h  structs.h
ILP_SOLVER/: ilp_solve.py  input.txt  output.txt
datasets/: Pallets_05.csv  Pallets_06.csv  Pallets_07.csv  TruckAndPallets_05.csv  TruckAndPallets_06.csv  TruckAndPallets_07.csv
docs/: Doxyfile  chart.csv
docs/html/: annotated.html  classILP-members.html  classILP.html  classInterface-members.html  classInterface.html  classPallet-members.html  classPallet.html  classSolver-members.html  classSolver.html  classes.html  dir_007ad4948e580287e9d3cd339e78f152.html  dir_007ad4948e580287e9d3cd339e78f152_dep.map  dir_007ad4948e580287e9d3cd339e78f152_dep.md5  dir_08cec4c655d37361da453b6dde918433.html  dir_08cec4c655d37361da453b6dde918433_dep.map  dir_08cec4c655d37361da453b6dde918433_dep.md5  dir_19d9bfbdf70e8e1b12291ee2612869f4.html  dir_19d9bfbdf70e8e1b12291ee2612869f4_dep.map  dir_19d9bfbdf70e8e1b12291ee2612869f4_dep.md5  dir_3f6157423b1e24fbbe29232d89e92d45.html  dir_7ab77309d66dae50b0db3e33401c06b8.html  dir_7ab77309d66dae50b0db3e33401c06b8_dep.map  dir_7ab77309d66dae50b0db3e33401c06b8_dep.md5  dir_860c11998a3807e839f8c74cce4c2bd1.html  dir_860c11998a3807e839f8c74cce4c2bd1_dep.map  dir_860c11998a3807e839f8c74cce4c2bd1_dep.md5  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d1f917784ef6b0bbb8c31ec803eebb7b.html  dir_d1f917784ef6b0bbb8c31ec803eebb7b_dep.map  files.html  functions.html  (+66 more)
(+76 files in other folders)
